feat: adjust info and source validate api
