# src/info/routes/infoRouter.ts
@@ -1,0 +1,17 @@
+import { Router } from 'express';
+import { FactoryFunction } from 'tsyringe';
+import { InfoController } from '../controller/infoController';
+
+
+const infoRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
+  const router = Router();
+  const controller = dependencyContainer.resolve(InfoController);
+
+  router.post('/gpkgs', controller.getInfoData.bind(controller));
+
+  return router;
+};
+
+export const INFO_ROUTER_SYMBOL = Symbol('infoRouterFactory');
+
+export { infoRouterFactory };
