# src/ingestion/controllers/ingestionController.ts
@@ -6,14 +6,13 @@ import { StatusCodes } from 'http-status-codes';
 import { inject, injectable } from 'tsyringe';
 import { INGESTION_SCHEMAS_VALIDATOR_SYMBOL, SchemasValidator } from '../../utils/validation/schemasValidator';
 import { FileNotFoundError, GdalInfoError, UnsupportedEntityError, ValidationError } from '../errors/ingestionErrors';
-import type { IRecordRequestParams, ResponseId, SourcesValidationResponse } from '../interfaces';
-import { IngestionManager } from '../models/ingestionManager';
+import type { GpkgInputFiles, IRecordRequestParams, ResponseId, SourcesValidationResponse } from '../interfaces';
 import { InfoData } from '../schemas/infoDataSchema';
+import { IngestionManager } from '../models/ingestionManager';
 
-type SourcesValidationHandler = RequestHandler<undefined, SourcesValidationResponse, unknown>;
-type SourcesInfoHandler = RequestHandler<undefined, InfoData[], unknown>;
 type NewLayerHandler = RequestHandler<undefined, ResponseId, unknown>;
 type UpdateLayerHandler = RequestHandler<IRecordRequestParams, ResponseId, unknown>;
+type GpkgInputFilesHandler = RequestHandler<undefined, SourcesValidationResponse, unknown>;
 
 @injectable()
 export class IngestionController {
@@ -65,34 +64,15 @@ export class IngestionController {
     }
   };
 
-  public validateSources: SourcesValidationHandler = async (req, res, next): Promise<void> => {
+  public validateGpkgs: GpkgInputFilesHandler = async (req, res, next): Promise<void> => {
     try {
-      const validInputFilesRequestBody: InputFiles = await this.schemasValidator.validateInputFilesRequestBody(req.body);
+      const validGpkgsInputFilesRequestBody: GpkgInputFiles = await this.schemasValidator.validateGpkgInputFilesBody(req.body);
 
-      const validationResponse = await this.ingestionManager.validateSources(validInputFilesRequestBody);
+      const validationResponse = await this.ingestionManager.validateGpkgs(validGpkgsInputFilesRequestBody);
 
       res.status(StatusCodes.OK).send(validationResponse);
     } catch (error) {
       next(error);
-    }
-  };
-
-  public getSourcesGdalInfo: SourcesInfoHandler = async (req, res, next): Promise<void> => {
-    try {
-      const validInputFilesRequestBody: InputFiles = await this.schemasValidator.validateInputFilesRequestBody(req.body);
-      const filesGdalInfoData = await this.ingestionManager.getInfoData(validInputFilesRequestBody);
-
-      res.status(StatusCodes.OK).send(filesGdalInfoData);
-    } catch (err) {
-      if (err instanceof FileNotFoundError) {
-        (err as HttpError).status = StatusCodes.NOT_FOUND;
-      }
-
-      if (err instanceof GdalInfoError) {
-        (err as HttpError).status = StatusCodes.UNPROCESSABLE_ENTITY;
-      }
-
-      next(err);
     }
   };
 }
